TREC-442 CollectionFactory should allow Collections to be split